java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javadocDeclaration/See3.java
class Test {
    /**
     *  @see #<error descr="Cannot resolve symbol 'perform(int)'">perform</error>(int)
     */
    public void i() {}
     
    public void perform() {}
}